tests/compile_fail/invalid_weight.stderr
error[E0308]: mismatched types
 --> $DIR/invalid_weight.rs:4:14
  |
4 |     #[weight(1.1)]
  |              ^^^ expected `u32`, found floating-point number
